<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    android:paddingBottom="15dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_item_photo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@android:color/darker_gray"
        app:civ_border_color="#FF909090"
        app:civ_border_width="1dp"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lin_content"
        android:layout_marginLeft="@dimen/spaces_normal"
        android:layout_toRightOf="@id/iv_item_photo"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black_content"
                android:text="@string/sample_username"
                android:textSize="@dimen/text_body"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_item_username"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/spaces_normal"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black_content"
                android:text="@string/sample_username"
                android:textSize="@dimen/text_tiny" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/color_black_content"
            android:layout_marginTop="@dimen/spaces_half"
            android:text="@string/sample_username"
            android:textSize="@dimen/text_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaces_default"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black_content"
                android:text="@string/sample_city"
                android:textSize="@dimen/text_tiny" />

            <TextView
                android:id="@+id/tv_item_email"
                android:layout_width="wrap_content"
                android:layout_marginStart="@dimen/spaces_normal"
                android:layout_height="wrap_content"
                android:textColor="@color/color_black_content"
                android:text="@string/sample_email"
                android:textSize="@dimen/text_tiny" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_below="@id/iv_item_photo"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/spaces_normal"
        android:layout_marginTop="@dimen/spaces_normal"
        android:background="@color/grey"
        android:layout_height="1dp"/>

</RelativeLayout>